<resources>
    <string name="app_name">Carchive</string>
    <string name="nadzornaPloca">Nadzorna ploča</string>
    <string name="katalogVozila">Katalog vozila</string>
    <string name="mapaVozila">Mapa vozila</string>
    <string name="ponude">Ponude</string>
    <string name="racuni">Računi</string>
    <string name="ugovori">Ugovori</string>
    <string name="ugovor">Ugovor</string>
    <string name="statistika">Statistika</string>
    <string name="oglasi">Oglasi</string>
    <string name="pomoc">Pomoć</string>
    <string name="rezervacije">Rezervacije</string>
    <string name="postavke">Postavke</string>
    <string name="odjava">Odjava</string>
    <string name="popisVozila">Popis vozila</string>
    <string name="popisKontakata">Popis kontakata</string>
    <string name="prijaviSe">Prijavi se</string>
    <string name="registrirajSe">Registriraj se</string>
    <string name="imeFirme">Ime firme</string>
    <string name="adresaFirme">Adresa firme</string>
    <string name="gradFirme">Grad firme</string>
    <string name="oibFirm">OIB firme</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="email">E-mail</string>
    <string name="brojTelefona">Broj telefona</string>
    <string name="dodajKontakt">Dodajte kontakt</string>
    <string name="dodajZaposlenika">Dodajte zaposlenika</string>
    <string name="azurirajZaposlenika">Ažuriraj zaposlenika</string>
    <string name="dodajVozilo">Dodajte vozilo</string>
    <string name="opceInformacije">Opće informacije</string>
    <string name="marka">Marka</string>
    <string name="model">Model</string>
    <string name="tehnickeKatakteristike">Tehničke karakteristike</string>
    <string name="slike">Slike</string>
    <string name="spremi">Spremi</string>
    <string name="ponudaPoslana">Ponuda poslana</string>
    <string name="ponudaNijePoslana">Ponuda nije poslana</string>
    <string name="najam">Najam</string>
    <string name="kupuje">Kupuje</string>
    <string name="kartaVozila">Karta vozila</string>
    <string name="prodanoVozila">Prodano vozila</string>
    <string name="dodanoKontakata">Dodano kontakata</string>
    <string name="stvoriPonudu">Stvori ponudu</string>
    <string name="stvoriRacun">Stvori račun</string>
    <string name="stvoriUgovorIRacun">Stvori ugovor i račun</string>
    <string name="pregledPonude">Pregled ponude</string>
    <string name="prodajVozilo">Prodaj vozilo</string>
    <string name="iznajmiVozilo">Iznajmi vozilo</string>
    <string name="racun">Račun</string>
    <string name="nastavi">Nastavi</string>
    <string name="posaljiPonudu">Pošalji ponudu</string>
    <string name="prodavac">Prodavač</string>
    <string name="vozilo">Vozilo</string>
    <string name="kontakt">Kontakt</string>
    <string name="cijena">Cijena</string>
    <string name="dodatno">Dodatno</string>
    <string name="racunPoPonudi">Račun po ponudi</string>
    <string name="auto">Auto</string>
    <string name="naslov">Naslov</string>
    <string name="datum">Datum</string>
    <string name="nacin_placanja">Nacin placanja</string>
    <string name="odaberite_vozilo">Odaberite vozilo</string>
    <string name="dodaj_oglas">Dodaj oglas</string>
    <string name="promjeni_oglas">Ažuriraj oglas</string>
    <string name="stvoriUgovor">Stvori ugovor</string>
    <string name="delete_error_car">Pogreška kod brisanja vozila</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lozinka">Lozinka</string>
    <string name="TrenutnaLozinka">Trenutna lozinka</string>
    <string name="lozinkaPonovi">Ponovite lozinku</string>
    <string name="noviCarchive">Novi na Carchive?</string>
    <string name="verzijaApp">Verzija aplikacije 1.0</string>
    <string name="prompt_email">Email</string>
    <string name="drawerZatvori">Zatvori nav</string>
    <string name="drawerOtvori">Otvori nav</string>
    <string name="toggleGumb">Nav gumb</string>
    <string name="logo">Logo</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="car_added">Automobil je dodan u katalog.</string>
    <string name="ad_edited">Oglas je ažuriran.</string>
    <string name="car_deleted">Automobil je obrisan iz kataloga.</string>
    <string name="car_edited">Informacije o automobilu su ažurirane.</string>
    <string name="info_missing">Sva polja su obavezna!</string>
    <string name="edit_car">Uredi vozilo</string>
    <string name="delete_car">Obriši vozilo</string>
    <string name="create_offer">Stvori ponudu</string>
    <string name="ad_added">Oglas je dodan u katalog.</string>
    <string name="error_adding_ad">Greska kod dodavanja oglasa.</string>
    <string name="edit_ad">Uredi oglas</string>
    <string name="delete_ad">Obriši oglas</string>
    <string-array name="GearBox">
        <item>Manual</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="Upotreba">
        <item>Iznajmljivanje</item>
        <item>Prodaja</item>
    </string-array>
    <string-array name="Marke">
        <item>BMW</item>
        <item>Audi</item>
        <item>Mercedes</item>
        <item>Škoda</item>
        <item>Renault</item>
        <item>Volkswagen</item>
        <item>Opel</item>
        <item>Ford</item>
        <item>Peugeot</item>
        <item>Honda</item>
        <item>Toyota</item>
        <item>Fiat</item>
        <item>Citroën</item>
        <item>Ferrari</item>
        <item>Lamborghini</item>
        <item>Porsche</item>
        <item>Aston Martin</item>
        <item>Jaguar</item>
        <item>Land Rover</item>
        <item>Chrysler</item>
        <item>Dodge</item>
        <item>Buick</item>
        <item>Chevrolet</item>
        <item>Nissan</item>
        <item>Mitsubishi</item>
        <item>Kia</item>
        <item>Hyundai</item>
        <item>Subaru</item>
        <item>Alfa Romeo</item>
        <item>Seat</item>
        <item>Mazda</item>
        <item>Saab</item>
        <item>Tesla</item>
        <item>Lincoln</item>
        <item>Cadillac</item>
        <item>Genesis</item>
        <item>Mini</item>
        <item>Smart</item>
        <item>Rivian</item>
    </string-array>
    <string-array name="model_BMW">
        <item>X5</item>
        <item>3 Series</item>
        <item>5 Series</item>
        <item>7 Series</item>
        <item>i8</item>
        <item>M3</item>
        <item>M4</item>
        <item>iX</item>
    </string-array>
    <string-array name="model_Audi">
        <item>A3</item>
        <item>A4</item>
        <item>A6</item>
        <item>A8</item>
        <item>Q5</item>
        <item>Q7</item>
        <item>Q8</item>
        <item>R8</item>
    </string-array>
    <string-array name="model_Mercedes">
        <item>C-Class</item>
        <item>E-Class</item>
        <item>S-Class</item>
        <item>A-Class</item>
        <item>GLC</item>
        <item>GLE</item>
        <item>GLS</item>
        <item>EQC</item>
    </string-array>
    <string-array name="model_Škoda">
        <item>Octavia</item>
        <item>Superb</item>
        <item>Fabia</item>
        <item>Kodiaq</item>
        <item>Karoq</item>
    </string-array>
    <string-array name="model_Renault">
        <item>Clio</item>
        <item>Captur</item>
        <item>Megane</item>
        <item>Scenic</item>
        <item>Twingo</item>
    </string-array>
    <string-array name="model_Volkswagen">
        <item>Golf</item>
        <item>Passat</item>
        <item>Jetta</item>
        <item>Tiguan</item>
        <item>Touran</item>
        <item>Arteon</item>
    </string-array>
    <string-array name="model_Opel">
        <item>Astra</item>
        <item>Corsa</item>
        <item>Insignia</item>
        <item>Grandland</item>
        <item>Mokka</item>
    </string-array>
    <string-array name="model_Ford">
        <item>Fiesta</item>
        <item>Focus</item>
        <item>Mondeo</item>
        <item>Kuga</item>
        <item>Puma</item>
    </string-array>
    <string-array name="model_Peugeot">
        <item>208</item>
        <item>3008</item>
        <item>5008</item>
        <item>508</item>
        <item>Partner</item>
    </string-array>
    <string-array name="model_Honda">
        <item>Civic</item>
        <item>Accord</item>
        <item>CR-V</item>
        <item>HR-V</item>
        <item>Jazz</item>
    </string-array>
    <string-array name="model_Toyota">
        <item>Corolla</item>
        <item>Yaris</item>
        <item>Camry</item>
        <item>RAV4</item>
        <item>Hilux</item>
    </string-array>
    <string-array name="model_Fiat">
        <item>500</item>
        <item>Panda</item>
        <item>Tipo</item>
        <item>Doblo</item>
        <item>500L</item>
    </string-array>
    <string-array name="model_Citroën">
        <item>C3</item>
        <item>C4</item>
        <item>C5 Aircross</item>
        <item>Berlingo</item>
    </string-array>
    <string-array name="model_Ferrari">
        <item>Portofino</item>
        <item>Roma</item>
        <item>812 Superfast</item>
        <item>SF90 Stradale</item>
    </string-array>
    <string-array name="model_Lamborghini">
        <item>Huracán</item>
        <item>Aventador</item>
        <item>Urus</item>
    </string-array>
    <string-array name="model_Porsche">
        <item>911</item>
        <item>Cayenne</item>
        <item>Macan</item>
        <item>Taycan</item>
    </string-array>
    <string-array name="model_Aston_Martin">
        <item>Vantage</item>
        <item>DB11</item>
        <item>DBS Superleggera</item>
        <item>Valhalla</item>
    </string-array>
    <string-array name="model_Jaguar">
        <item>XE</item>
        <item>XJ</item>
        <item>F-Type</item>
        <item>F-Pace</item>
    </string-array>
    <string-array name="model_Land_Rover">
        <item>Defender</item>
        <item>Discovery</item>
        <item>Range Rover</item>
        <item>Range Rover Sport</item>
    </string-array>
    <string-array name="model_Chrysler">
        <item>Pacifica</item>
        <item>Voyager</item>
    </string-array>
    <string-array name="model_Dodge">
        <item>Charger</item>
        <item>Challenger</item>
        <item>Durango</item>
    </string-array>
    <string-array name="model_Buick">
        <item>Encore</item>
        <item>Envision</item>
        <item>LaCrosse</item>
    </string-array>
    <string-array name="model_Chevrolet">
        <item>Cruze</item>
        <item>Malibu</item>
        <item>Equinox</item>
        <item>Camaro</item>
    </string-array>
    <string-array name="model_Nissan">
        <item>Micra</item>
        <item>Altima</item>
        <item>370Z</item>
        <item>Juke</item>
        <item>Qashqai</item>
    </string-array>
    <string-array name="model_Mitsubishi">
        <item>Lancer</item>
        <item>Outlander</item>
        <item>Pajero</item>
    </string-array>
    <string-array name="model_Kia">
        <item>Soul</item>
        <item>Ceed</item>
        <item>Sportage</item>
        <item>Stinger</item>
    </string-array>
    <string name="Opis">Opis</string>
    <string name="DodavanjeOglasa">Dodavanje oglasa</string>
    <string name="rezervacija">Rezervacija</string>
    <string name="osiguranje">Osiguranje</string>
    <string name="naziv">Naziv</string>
    <string name="mjesto">Mjesto</string>
    <string name="azurirajUgovor">Ažurirajte ugovor</string>
    <string name="AzuriranjeUgovora">Ažuriranje ugovora</string>
    <string name="potpis">Potpis</string>
</resources>