<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/navBackButton"
            layout="@layout/toolbar_back_button" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_contacts_add_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="15dp"
                    android:textColor="?attr/colorOnBackground"
                    android:text="@string/DodavanjeOglasa"
                    android:textSize="24sp" />
                <!-- Naslov -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/naslov"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp" />

                <EditText
                    android:id="@+id/et_ad_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_textbox"
                    android:padding="12dp"
                    android:inputType="text" />

                <!-- Opis -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Opis"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp" />

                <EditText
                    android:id="@+id/et_ad_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_textbox"
                    android:padding="12dp"
                    android:inputType="textMultiLine"
                    android:minHeight="100dp" />

                <!-- Datum (Read-only) -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datum"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/tv_current_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_textbox"
                    android:padding="12dp"
                    android:textColor="@color/textColorLight"
                    android:enabled="false" />

                <!-- Način plaćanja -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nacin_placanja"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp" />

                <Spinner
                    android:id="@+id/spn_payment_method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:popupBackground="@color/primaryColorLight"
                    android:background="@drawable/spinner_item" />

                <!-- Popis vozila -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vozilo"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp" />

                <AutoCompleteTextView
                    android:id="@+id/actv_vehicle_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_textbox"
                    android:popupBackground="@color/primaryColorLight"
                    android:textColor="@color/textColorLight"
                    android:padding="12dp"
                    android:hint="@string/odaberite_vozilo" />

                <!-- Dodaj oglas -->
                <Button
                    android:id="@+id/btn_add_ad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="@color/accentColorDark"
                    android:text="@string/dodaj_oglas"
                    android:textColor="@color/textColorDark" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
